--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,7 +229,7 @@ else(VERSION_MATCHES_LENGTH GREATER 3)
     set(CUBRID_EXTRA_VERSION 0)
   endif(EXISTS "${CMAKE_SOURCE_DIR}/.git" AND GIT_FOUND)
 endif(VERSION_MATCHES_LENGTH GREATER 3)
-set(CUBRID_VERSION ${CUBRID_MAJOR_VERSION}.${CUBRID_MINOR_VERSION}.${CUBRID_PATCH_VERSION}.${CUBRID_EXTRA_VERSION}${CUBRID_HASH_TAG})
+set(CUBRID_VERSION ${CUBRID_MAJOR_VERSION}.${CUBRID_MINOR_VERSION}.${CUBRID_PATCH_VERSION}.${CUBRID_EXTRA_VERSIMINSIZERELON}${CUBRID_HASH_TAG})
 
 set(MAJOR_RELEASE_STRING ${CUBRID_MAJOR_VERSION}.${CUBRID_MINOR_VERSION})
 set(PACKAGE_STRING "${PROJECT_NAME} ${MAJOR_RELEASE_STRING}")
@@ -240,7 +240,13 @@ set(RELEASE_STRING ${CUBRID_MAJOR_VERSION}.${CUBRID_MINOR_VERSION}.${CUBRID_PATC
 # BUILD_NUMBER (digital only version string) for legacy codes
 set(BUILD_NUMBER ${CUBRID_MAJOR_VERSION}.${CUBRID_MINOR_VERSION}.${CUBRID_PATCH_VERSION}.${CUBRID_EXTRA_VERSION})
 set(BUILD_OS ${CMAKE_SYSTEM_NAME})
-string(TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
+
+# set BUILD_TYPE for cubrid_rel
+if(CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo")
+  set(BUILD_TYPE "release")
+else(CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo")
+  string(TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
+endif(CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo")
 
 if(MSVC)
   configure_file(cmake/version.rc.cmake version.rc)
