--- a/jsp/ivy.xml
+++ b/jsp/ivy.xml
@@ -8,5 +8,8 @@
     </configurations>
     <dependencies>
         <dependency org="cubrid" name="cubrid-jdbc" rev="latest.integration" conf="runtime->default"/>
+
+        <dependency org="net.java.dev.jna" name="jna" rev="5.8.0" conf="runtime->default"/>
+        <dependency org="net.java.dev.jna" name="jna-platform" rev="5.8.0" conf="runtime->default"/>
     </dependencies>
 </ivy-module>
