--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -218,6 +218,7 @@ set(QUERY_SOURCES
   ${QUERY_DIR}/query_opfunc.c
   ${QUERY_DIR}/query_reevaluation.cpp
   ${QUERY_DIR}/regu_var.cpp
+  ${QUERY_DIR}/scan_javasp.cpp
   ${QUERY_DIR}/scan_json_table.cpp
   ${QUERY_DIR}/scan_manager.c
   ${QUERY_DIR}/serial.c
@@ -235,6 +236,7 @@ set(QUERY_HEADERS
   ${QUERY_DIR}/query_analytic.hpp
   ${QUERY_DIR}/query_monitoring.hpp
   ${QUERY_DIR}/query_reevaluation.hpp
+  ${QUERY_DIR}/scan_javasp.hpp
   ${QUERY_DIR}/scan_json_table.hpp
   ${QUERY_DIR}/string_regex.hpp
   )
