--- a/jsp/ivy.xml
+++ b/jsp/ivy.xml
@@ -11,5 +11,6 @@
 
         <dependency org="net.java.dev.jna" name="jna" rev="5.8.0" conf="runtime->default"/>
         <dependency org="net.java.dev.jna" name="jna-platform" rev="5.8.0" conf="runtime->default"/>
+        <dependency org="com.esotericsoftware" name="reflectasm" rev="1.11.9" conf="runtime->default"/>
     </dependencies>
 </ivy-module>
