--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -230,6 +230,9 @@ set(QUERY_SOURCES
   ${QUERY_DIR}/execute_statement.c
   ${QUERY_DIR}/numeric_opfunc.c
   ${QUERY_DIR}/method_def.cpp
+  ${QUERY_DIR}/method_query.cpp
+  ${QUERY_DIR}/method_query_struct.cpp
+  ${QUERY_DIR}/method_query_util.cpp
   ${QUERY_DIR}/query_cl.c
   ${QUERY_DIR}/query_dump.c
   ${QUERY_DIR}/query_method.cpp
