--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -21,6 +21,7 @@ install(FILES
   ${CMAKE_SOURCE_DIR}/demo/demodb_schema
   ${CMAKE_SOURCE_DIR}/demo/SpPrepareTest.java
   ${CMAKE_SOURCE_DIR}/demo/SpTypeTest.java
+  ${CMAKE_SOURCE_DIR}/demo/SpJDBCTest.java
   DESTINATION ${CUBRID_DEMODIR}) 
 
 if(UNIX)
