--- a/jsp/ivy.xml
+++ b/jsp/ivy.xml
@@ -8,5 +8,7 @@
     </configurations>
     <dependencies>
         <dependency org="cubrid" name="cubrid-jdbc" rev="latest.integration" conf="runtime->default"/>
+        <!-- <dependency org="com.kohlschutter.junixsocket" name="junixsocket-dist" rev="2.4.0"/> -->
+        <dependency org="io.netty" name="netty-buffer" rev="4.1.69.Final" conf="runtime->default"/>
     </dependencies>
 </ivy-module>
