--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -16,7 +16,7 @@
 # 
 #
 
-install(FILES ${CMAKE_SOURCE_DIR}/demo/demodb_objects ${CMAKE_SOURCE_DIR}/demo/demodb_schema
+install(FILES ${CMAKE_SOURCE_DIR}/demo/demodb_objects ${CMAKE_SOURCE_DIR}/demo/demodb_schema ${CMAKE_SOURCE_DIR}/demo/SpTest.java
   DESTINATION ${CUBRID_DEMODIR}) 
 
 if(UNIX)
