--- a/cas/CMakeLists.txt
+++ b/cas/CMakeLists.txt
@@ -29,6 +29,7 @@ set(LIBCAS_SOURCES
   ${BROKER_DIR}/cas_xa.c 
   ${BROKER_DIR}/cas_schema_info.c 
   ${BROKER_DIR}/cas_log.c 
+  ${BROKER_DIR}/cas_info.c
   ${BROKER_DIR}/cas_sql_log2.c 
   ${BROKER_DIR}/broker_filename.c 
   ${BROKER_DIR}/broker_util.c 
