--- a/jsp/ivy.xml
+++ b/jsp/ivy.xml
@@ -10,5 +10,6 @@
         <dependency org="cubrid" name="cubrid-jdbc" rev="latest.integration" conf="runtime->default"/>
         <dependency org="com.kohlschutter.junixsocket" name="junixsocket-core" rev="2.4.0" conf="runtime->default"/>
         <dependency org="com.kohlschutter.junixsocket" name="junixsocket-server" rev="2.4.0" conf="runtime->default"/>
+        <dependency org="io.netty" name="netty-all" rev="4.1.82.Final" conf="runtime->default"/>
     </dependencies>
 </ivy-module>
