--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -198,6 +198,7 @@ else(UNIX)
 endif(UNIX)
 
 set(JAVASP_SERVER_SOURCES 
+  ${METHOD_DIR}/method_connection_java.cpp
   ${EXECUTABLES_DIR}/javasp.cpp
 )
 SET_SOURCE_FILES_PROPERTIES(
