--- a/sa/CMakeLists.txt
+++ b/sa/CMakeLists.txt
@@ -325,6 +325,7 @@ set(JSP_SOURCES
 set(METHOD_SOURCES
   ${METHOD_DIR}/method_callback.cpp
   ${METHOD_DIR}/method_connection_cl.cpp
+  ${METHOD_DIR}/method_connection_java.cpp
   ${METHOD_DIR}/method_connection_sr.cpp
   ${METHOD_DIR}/method_connection_pool.cpp
   ${METHOD_DIR}/method_def.cpp
