add a new file, expr_type.[cpp|hpp] and move expr-related routines to the file

--- a/sa/CMakeLists.txt
+++ b/sa/CMakeLists.txt
@@ -203,6 +203,7 @@ set(PARSER_SOURCES
   ${PARSER_DIR}/cnf.c
   ${PARSER_DIR}/compile.c
   ${PARSER_DIR}/double_byte_support.c
+  ${PARSER_DIR}/expr_type.cpp
   ${PARSER_DIR}/func_type.cpp
   ${PARSER_DIR}/keyword.c
   ${PARSER_DIR}/method_transform.c
@@ -224,6 +225,7 @@ set(PARSER_SOURCES
   ${PARSER_DIR}/xasl_generation.c
   )
 set(PARSER_HEADERS
+  ${PARSER_DIR}/expr_type.hpp
   ${PARSER_DIR}/func_type.hpp
   ${PARSER_DIR}/parse_type.hpp
   ${PARSER_DIR}/parser_allocator.hpp
