rename type_checking -> type_check

--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -206,7 +206,7 @@ set(PARSER_SOURCES
   ${PARSER_DIR}/scanner_support.c
   ${PARSER_DIR}/semantic_check.c
   ${PARSER_DIR}/show_meta.c
-  ${PARSER_DIR}/type_checking.c
+  ${PARSER_DIR}/type_check.c
   ${PARSER_DIR}/view_transform.c
   ${PARSER_DIR}/xasl_regu_alloc.cpp
   ${PARSER_DIR}/xasl_generation.c
@@ -443,7 +443,7 @@ SET_SOURCE_FILES_PROPERTIES(
   ${PARSER_DIR}/scanner_support.c
   ${PARSER_DIR}/semantic_check.c
   ${PARSER_DIR}/show_meta.c
-  ${PARSER_DIR}/type_checking.c
+  ${PARSER_DIR}/type_check.c
   ${PARSER_DIR}/view_transform.c
   ${PARSER_DIR}/xasl_generation.c
   ${OPTIMIZER_SOURCES}
